--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "1.0.17"
   },
   "engines": {
-    "node": ">=6.11.3"
+    "node": ">=6.11.3",
+    "npm": ">=5.5.1"    
   },
   "scripts": {
     "start": "react-app-rewired start",
