--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-scripts": "1.0.17"
   },
   "engines": {
-    "node": ">=6.11.2",
-    "npm": ">=5.5.1"    
+    "node": "8.9.0",
+    "npm": "5.5.1"    
   },
   "scripts": {
     "start": "react-app-rewired start",
