--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^2.13.8",
     "moment": "^2.19.1",
     "react": "^16.0.0",
+    "react-app-rewired": "^1.3.4",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.2.2",
     "react-scripts": "1.0.17"
@@ -17,7 +18,6 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.6.2",
-    "react-app-rewired": "^1.3.4"
+    "babel-plugin-import": "^1.6.2"
   }
 }
