--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "set GENERATE_SOURCEMAP=false&&react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "set GENERATE_SOURCEMAP=false&&react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
