--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "antd": "^2.13.8",
     "moment": "^2.19.1",
     "react": "^16.0.0",
-    "react-app-rewired": "^1.3.4",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.2.2",
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "set GENERATE_SOURCEMAP=false&&react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "set GENERATE_SOURCEMAP=false&&react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.6.2"
+    "babel-plugin-import": "^1.6.2",
+    "react-app-rewired": "^1.3.4"
   }
 }
